// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergify default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

pull_request_rules:
  - name: Automatic merge on approval and successful build
    actions:
      merge:
        method: squash
        commit_message: title+body
        strict: smart
        strict_method: merge
      delete_head_branch: {}
    conditions:
      - \\"#approved-reviews-by>=1\\"
      - -label~=(do-not-merge)
      - status-success=build
"
`;

exports[`mergify with options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

pull_request_rules:
  - name: Automatic merge on approval and successful build
    actions:
      merge:
        method: squash
        commit_message: title+body
        strict: smart
        strict_method: merge
      delete_head_branch: {}
    conditions:
      - \\"#approved-reviews-by>=3\\"
      - -label~=(do-not-merge|missing-tests)
      - status-success=build
"
`;
